package com.ab.uml.associaton;

/**
 * @author ab
 * @description
 * @date
 */
public class Person {
    private IDCard card;
}
