package com.ab.uml.dependence;

/**
 * @author ab
 * @description
 * @date
 */
public class IDCard {
}
